--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>UnityChain.net</title>
+<title>UnityChain.Net</title>
 <meta property="og:title" content="UnityChain.net" />
 <meta name="description" content="Next Generation Consensus Protocol." />
 <meta property="og:description" content="UnityChain.net" />
